--- a/distributed-calculator/ClientApp/src/app/home/home.component.html
+++ b/distributed-calculator/ClientApp/src/app/home/home.component.html
@@ -1,2 +1,56 @@
 <h1>Distributed Worker Calulator!</h1>
-
+<p>In this project, we are building a distributed system. This system has a coordinator component (this site) and many workers that process individual jobs.</p>
+<p>In the first iteration, the workers will be processing math problems and returning the results to the coordinator. Once we have mastered that, we expect to have them do much more challenging jobs.</p>
+<p>The ivory tower architects have spent the last 14 months developing this coordinator, and they are now ready for you and your team to start building one of the many workers.</p>
+<h3>Worker Specification</h3>
+<p>
+  Each worker will expose two HTTP endpoints:
+<ul>
+  <li>POST CreateJob <button class="btn btn-primary btn-sm" (click)="createJob()">Test Endpoint</button></li>
+  <li>POST ErrorCheck <button class="btn btn-primary btn-sm" (click)="errorCheck()">Test Endpoint</button></li>
+</ul>
+<p>Workers must be registered when they come online and are ready to receive jobs.</p>
+<h4>POST CreateJob Specification</h4>
+<p>This endpoint will receive job requests and respond with the solution. In the future, we will extend the system to return responses asynchronously, but this is just the first version.</p>
+<pre>
+  <code [innerHTML]="snippet1"></code>
+</pre>
+<p>The responses will be of the following form:</p>
+<pre>
+  <code [innerHTML]="snippet2"></code>
+</pre>
+<h4>POST ErrorCheck Specification</h4>
+<p>The coordinator node will do error checking on provided solutions to ensure that the workers are behaving to specification. When errors are detected, they will be sent to this endpoint.</p>
+<pre>
+  <code [innerHTML]="snippet3"></code>
+</pre>
+<p>No response is accepted. The worker is expected to use the jobId to coordinate the problem, solution, and any error messages.</p>
+<h4>POST http://{{ "{" }}coordinator hostname}/register Specification</h4>
+<p>Workers must be registered by posting to the registration endpoint.</p>
+<pre>
+  <code [innerHTML]="snippet4"></code>
+</pre>
+<p>The responses will be of the following form:</p>
+<pre>
+  <code [innerHTML]="snippet5"></code>
+</pre>
+<p>Workers that fail to responded will be de-registered and no further jobs will be assigned.</p>
+<h3>Job Specification</h3>
+<p>
+  Each job will have a command indicating what type of operation is expected. In this initial iteration, all jobs will have the 'CALCULATE: ' instruction. The coordinator will test the fitness of each registered worker by
+  sending increasingly complex math problems to workers as they answer correctly. For example:
+</p>
+<ul>
+  <li>CALCULATE: 1 + 2</li>
+  <li>CALCULATE: 12 * 9</li>
+  <li>CALCULATE: (68 - 5) / 7</li>
+</ul>
+<h3>Solutions</h3>
+<p>
+  There are 2 obvious start points for solving this problem:
+</p>
+<ol>
+  <li>Code a worker that can be registered and receive jobs</li>
+  <li>Code a string calculator that can solve math problems of various levels of complexity</li>
+</ol>
+<p>Gather a team who wants to approach the problem from the same starting point you do and be sure to test drive your solution. Good luck!</p>
